[package]
name = "splat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.31.1" 
vulkano-shaders = "0.31.1" 
winit = "0.27.3"
vulkano-win = "0.31.0" 
vulkano-util ="0.31.0" 
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = "0.18"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8.4"
glium = "0.32.1"
rusttype = { version = "0.8.3", features = ["gpu_cache"] }
